segunda version del pong

--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
         <span id="player2__markcount">0</span>
       </div>
       <section class="game">
-        <canvas id="canvas">
-            <div class="net"></div>
-        </canvas>
+        <canvas id="canvas"></canvas>
       </section>
     </main>
     <script src="./index.js"></script>
