--- a/index.html
+++ b/index.html
@@ -5,7 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Canvas test</title>
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./src/stylesheets/style.css" />
+    <!-- fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
+      rel="stylesheet"
+    />
+    <!--  -->
   </head>
   <body>
     <main class="board">
@@ -18,6 +26,13 @@
         <canvas id="canvas"></canvas>
       </section>
     </main>
-    <script src="./index.js"></script>
+
+    <footer>
+      <h4 class="svg-container footer-title">
+        Projecto creado por AlvaroBT7{svg:githubLogo}
+      </h4>
+    </footer>
+    <script defer type="module" src="./src/js/svgMaker.js"></script>
+    <script defer src="./src/js/game.js"></script>
   </body>
 </html>
