--- a/index.html
+++ b/index.html
@@ -28,8 +28,10 @@
     </main>
 
     <footer>
-      <h4 class="svg-container footer-title">
-        Projecto creado por AlvaroBT7{svg:githubLogo}
+      <h4 class="footer-title svg-container">
+        Proyecto creado por
+        <a href="https://github.com/AlvaroBT7" target="_blank">AlvaroBT7</a>
+        {svg:githubLogo}
       </h4>
     </footer>
     <script defer type="module" src="./src/js/svgMaker.js"></script>
