--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <footer>
       <h4 class="footer-title svg-container">
         Proyecto creado por
-        <a href="https://github.com/AlvaroBT7" target="_blank">AlvaroBT7</a>
+        <a href="https://github.com/AlvaroBT7/AlvaroBT7.github.io" target="_blank">AlvaroBT7</a>
         {svg:githubLogo}
       </h4>
     </footer>
